[package]
name = "llm-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "llm-proxy"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["http1", "http2"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
futures = "0.3"
http = "1"
uuid = { version = "1", features = ["v4"] }
